feat: get by id api added
